--- a/code/00_assignments/00_htmlcss/04_final_project/assets/css/style.css
+++ b/code/00_assignments/00_htmlcss/04_final_project/assets/css/style.css
@@ -578,10 +578,6 @@ video {
   top: 80px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -602,10 +598,6 @@ video {
   margin-left: -1rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -614,12 +606,8 @@ video {
   margin-top: 8rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
+.mt-48 {
+  margin-top: 12rem;
 }
 
 .box-border {
@@ -656,14 +644,6 @@ video {
 
 .h-\[42px\] {
   height: 42px;
-}
-
-.h-\[1\] {
-  height: 1;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .w-20 {
@@ -704,18 +684,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-\[100vw\] {
-  width: 100vw;
 }
 
 .min-w-\[60\%\] {
@@ -797,19 +765,6 @@ video {
   gap: 2rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-x-56 {
-  -moz-column-gap: 14rem;
-       column-gap: 14rem;
-}
-
-.gap-y-56 {
-  row-gap: 14rem;
-}
-
 .gap-y-8 {
   row-gap: 2rem;
 }
@@ -861,14 +816,14 @@ video {
   background-color: rgb(244 244 245 / var(--tw-bg-opacity, 1));
 }
 
-.bg-zinc-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 91 / var(--tw-bg-opacity, 1));
-}
-
 .bg-zinc-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(161 161 170 / var(--tw-bg-opacity, 1));
+}
+
+.bg-zinc-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 91 / var(--tw-bg-opacity, 1));
 }
 
 .p-0 {
@@ -879,12 +834,12 @@ video {
   padding: 0.25rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-2 {
@@ -892,14 +847,14 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-28 {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
 }
 
 .px-4 {
@@ -932,37 +887,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .pt-16 {
   padding-top: 4rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
-}
-
 .pt-7 {
   padding-top: 1.75rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
 }
 
 .text-center {
@@ -982,6 +916,10 @@ video {
   font-size: 0.75rem;
 }
 
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
+}
+
 .text-\[0\.95rem\] {
   font-size: 0.95rem;
 }
@@ -994,31 +932,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-\[0\.5rem\] {
-  font-size: 0.5rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
-}
-
-.text-\[0\.3rem\] {
-  font-size: 0.3rem;
-}
-
-.text-\[0\.7rem\] {
-  font-size: 0.7rem;
-}
-
-.text-\[0\.8rem\] {
-  font-size: 0.8rem;
 }
 
 .font-bold {
@@ -1039,10 +952,6 @@ video {
 
 .capitalize {
   text-transform: capitalize;
-}
-
-.leading-3 {
-  line-height: .75rem;
 }
 
 .leading-none {
@@ -1078,14 +987,6 @@ video {
   color: rgb(39 39 42 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\] {
-  color: ;
-}
-
-.text-\[0\.5r7em\] {
-  color: 0.5r7em;
-}
-
 .shadow-\[2px_2px_4px_rgba\(89\2c 97\2c 113\2c 0\.6\)\] {
   --tw-shadow: 2px 2px 4px rgba(89,97,113,0.6);
   --tw-shadow-colored: 2px 2px 4px var(--tw-shadow-color);
@@ -1102,6 +1003,52 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[4px_4px_4px_\] {
+  --tw-shadow: 4px 4px 4px;
+  --tw-shadow-colored: 4px 4px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[4px_4px_4px_grey\] {
+  --tw-shadow: 4px 4px 4px grey;
+  --tw-shadow-colored: 4px 4px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[4px_2px_4px_grey\] {
+  --tw-shadow: 4px 2px 4px grey;
+  --tw-shadow-colored: 4px 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[2px_2px_4px_grey\] {
+  --tw-shadow: 2px 2px 4px grey;
+  --tw-shadow-colored: 2px 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[2px2px_2px_4px_grey\] {
+  --tw-shadow: 2px2px 2px 4px grey;
+  --tw-shadow-colored: 2px2px 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[2px_2px_2px_4px_grey\] {
+  --tw-shadow: 2px 2px 2px 4px grey;
+  --tw-shadow-colored: 2px 2px 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[4px\] {
+  --tw-shadow-color: 4px;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline-none {
@@ -1167,18 +1114,13 @@ video {
   background-color: rgb(228 228 231 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:text-nav-color-a:hover {
+  color: rgba(89, 97, 113, 1.0);
+}
+
 .hover\:text-primary-color:hover {
   --tw-text-opacity: 1;
   color: rgb(63 111 243 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-black:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-nav-color-a:hover {
-  color: rgba(89, 97, 113, 1.0);
 }
 
 .hover\:underline:hover {
@@ -1191,15 +1133,19 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .group:hover .group-hover\:text-primary-color {
   --tw-text-opacity: 1;
   color: rgb(63 111 243 / var(--tw-text-opacity, 1));
+}
+
+@media (max-width: 1330px) {
+  .max-xl1\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .max-xl1\:gap-6 {
+    gap: 1.5rem;
+  }
 }
 
 @media (max-width: 1130px) {
@@ -1217,5 +1163,28 @@ video {
 
   .max-lg\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .max-lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+@media (max-width: 880px) {
+  .max-md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .max-md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .max-sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 }
