--- a/final project blog site/css/latest.css
+++ b/final project blog site/css/latest.css
@@ -85,6 +85,11 @@ img {
     width: 100%;
 }
 
+    h1{
+        text-align: center;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+    }
 
 
 
@@ -115,6 +120,10 @@ img {
 
     .card {
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        text-align: center;
     }
 
     .card img, .card span {
