--- a/blog-project/stylesheets/profile.css
+++ b/blog-project/stylesheets/profile.css
@@ -161,7 +161,7 @@ button:hover {
 @media (max-width: 768px) {
     .container {
         padding: 16px;
-        border: 10px solid red;
+        /* border: 10px solid red; */
     }
 
     .profile-content {
