--- a/blog-project/stylesheets/homepage.css
+++ b/blog-project/stylesheets/homepage.css
@@ -8,6 +8,11 @@ body {
     background-color: #f5f5f5;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
+    font-family: "Kanit", serif;
+    font-weight: 600;
+    font-style: normal;
+    background-color: #333;
+    /* opacity: 0.5; */
 }
 
 .container {
