--- a/code/html-css-final-project/index.css
+++ b/code/html-css-final-project/index.css
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+
 }
 
 body {
@@ -30,7 +32,7 @@ body {
 }
 
 #search {
-    flex: 1;
+    /* flex: 1; */
     margin: 0 20px;
 }
 
@@ -58,7 +60,9 @@ body {
 
 .navbar-menu {
     display: flex;
-    list-style: none;
+    align-items: center;
+    gap: 3rem;
+
     
 }
 
@@ -66,6 +70,8 @@ body {
     color: white;
     text-decoration: none;
     margin: 0 10px;
+    font-size: 1.1rem;
+    text-transform: uppercase;
    
 }
 
@@ -73,49 +79,106 @@ body {
     background: none;
     border: none;
     color: white;
-    font-size: 1.5rem;
+    font-size: 2rem;
     cursor: pointer;
     display: none;
 }
 
-/* Main Layout */
+/* ====================Main Layout==================================== */
 .main-layout {
     display: grid;
     grid-template-columns: 250px 1fr;
     gap: 20px;
     margin: 20px;
+    
 }
 
-/* Sidebar */
+/* ====================Sidebar========================== */
 .sidebar {
     background-color: #f4f4f9;
     padding: 15px;
     border-right: 1px solid #ddd;
-    /* height: 100%;
-    position: fixed; */
-    
+    /* position: fixed;  Fixes the sidebar to the viewport */
+    /* top: auto; */
+    /* left: 0; */
+    /* width: 250px;  Ensure it has a fixed width */
+    /* height: auto; Makes it take the full height of the viewport */
+    /* background-color: #f4f4f9; */
+    /* padding: 15px; */
+    /* border-right: 1px solid #ddd; */
+     /* overflow-y: auto; /*Allows scrolling inside if content overflows */
 }
 
-.sidebar ul {
-    list-style: none;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.profile-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.profile-details img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  
+}
+
+.profile-details h2{
+    font-size: 1.3rem;
+
+}
+.profile-details button{
+    display: flex;
+    flex-direction: column;
+}
+
 
 .sidebar li {
     margin: 15px 0;
     display: flex;
     align-items: center;
+    /* background: #4CAF50; */
+    font-size: 1.4rem;
+    color: #000000;
+
 }
 
 .sidebar li a {
     text-decoration: none;
     color: #333;
     margin-left: 10px;
+    font-size: 1.2rem;
+    text-transform: uppercase;
 }
 
-.sidebar li i {
-    font-size: 1.2rem;
+.sidebar li.active{
     color: #4CAF50;
+
 }
+
+.sidebar li a:hover{
+    color:#4CAF50;
+    transition: all 300ms ease;
+
+}
+
+
 
 /* Article/Profile Section */
 article {
