--- a/code/html-css-final-project/profile.css
+++ b/code/html-css-final-project/profile.css
@@ -39,24 +39,10 @@ body {
     text-transform: uppercase;
 
 }
-/* .navbuttons button {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 1.5rem;
-    cursor: pointer;
-    
-}
 
-.navbuttons button i {
-    display: none;
-} */
 
-/* Profile Section */
+/* ========================Profile Section===================== */
 .profile-section {
-    /* display: flex;
-    align-items: center;
-    justify-content: space-between; */
     padding: 20px;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -117,10 +103,6 @@ body {
     color: #777;
 }
 
-/* .profile-section li {
-    list-style: none;
-    margin: 10px 0;
-} */
 
  button {
    width: 120px;
@@ -139,7 +121,11 @@ body {
     background-color: #45a049;
 }
 
-/* Profile Items */
+
+
+
+/* ================================Profile Items================= */
+
 .profile-items ul {
     display: flex;
     justify-content: space-between;
