--- a/code/flexbox/style.css
+++ b/code/flexbox/style.css
@@ -1,64 +1,72 @@
-#wrapper {
+.challenge-1{
     display: flex;
-    flex-wrap: wrap;
-}
+    }
+    .challenge-2{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .challenge-3{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+    .challenge-4{
+        display: flex;
+        justify-content: space-around;
+    }
+    .challenge-5{
+        display: flex;
+        justify-content: center ;
+        gap:    20px;
+    }
+    .challenge-6 .bubble{
+        text-align: center ;
 
-.flex-parent {
-    /* style properties */
-    background-color: lightblue;
-    height: 40vh;
-    border: 10px solid navy;
-
-    /* flexbox properties */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    /* justify-content: space-evenly; */
-    align-items: center;
-    /* align-content: space-between; */
-
-    /* row-gap: 1em; */
-    /* column-gap: 1em; */
-    gap: 1em 3em;
-}
-
-.box {
-    /* style properties */
-    height: 100px;
-    width: 100px;
-    background-color: orchid;
-    border: 2px solid navy;
-    border-radius: 10%;
-    font-size: 3em;
+        justify-items: center ;
+        justify-content: baseline;
+        flex-wrap: wrap;
+    }
+    .challenge-7{
+        display: flex;
+    }
+    .challenge-7 .red{
+        flex-grow: 3;
+    }
+    
+    .challenge-8{
+        flex-direction: column;
+        justify-items: center;
+    
+    
+    }
+    .challenge-8 .blue {
+        order: -1;
+    }
+    .challenge-8 .red{
+        order: 2;
+    
+    }
+    .challenge-8 .green{
+        order: 1;
+    }
+    
+.bubble {
+    height: 5em;
+    width: 5em;
     color: white;
-
-    /* flex properties */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border-radius: 50%;
+    border: 0.1em solid black;
 }
 
-#one {
-    font-size: 1em;
-    flex-shrink: 3;
-    align-self: flex-end;
+.red {
+    background-color: red;
 }
 
-#two {
-    order: 3;
-    flex-grow: 2;
+.blue {
+    background-color: blue;
 }
 
-#four {
-    order: 1;
-    flex-grow: 2;
+.green {
+    background-color: green;
 }
 
-#six {
-    order: -1;
-}
-
-#eight {
-    align-self: flex-start;
-}
