--- a/code/WebAPIs/WebAPI-assignment1/styles.css
+++ b/code/WebAPIs/WebAPI-assignment1/styles.css
@@ -8,40 +8,41 @@ body{
 
 main{
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
   grid-template-rows: min-content min-content;
   gap: 5px;
 }
 
 h1{
-  grid-column: 1 / 3;
+  grid-row: 1;
+  text-align: center;
 }
 
-#dark-btn{
+#mode-btn{
   grid-row: 2;
-  grid-column: 1;
+  justify-self: center;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
-
-#light-btn{
-  grid-row: 2;
-  grid-column: 2;
-}
-
 
 button{
   padding: 0.5rem;
   font-size: 1.5rem;
+  width: 150px;
   background-color: #6B7280;
   border: none;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 button:hover{
   background-color: #6b7280c0;
 }
 
-
-.whiteText{
+/* .whiteText{
   color: #f0f6fc;
 }
 
@@ -55,4 +56,14 @@ button:hover{
 
 .whiteBackground{
   background-color: #fffff1;
+} */
+
+.darkMode{
+  background-color: #0d1118;
+  color: #f0f6fc;
+}
+
+.ligthMode{
+  background-color: #fffff1 ;
+  color: #262626;
 }
