--- a/code/Web API/style.css
+++ b/code/Web API/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #efe9e9;
+    background-color: #140a31b1;
     color: #333;
     display: flex;
     flex-direction: column;
