--- a/code/html-css-final-project/index.css
+++ b/code/html-css-final-project/index.css
@@ -7,6 +7,12 @@
 
     
 }
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px;
+    margin-top:3px ;
+}
 
 .navbar-menu li a {
     color: white;
@@ -28,10 +34,10 @@
 
 /* ====================Main Layout==================================== */
 .main-layout {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    gap: 20px;
+    display: flex;
+    overflow: auto;
     margin: 20px;
+    margin-top: 5rem;
     
 }
 
@@ -40,15 +46,18 @@
     background-color: #f4f4f9;
     padding: 15px;
     border-right: 1px solid #ddd;
-    /* position: fixed;  Fixes the sidebar to the viewport */
-    /* top: auto; */
-    /* left: 0; */
-    /* width: 250px;  Ensure it has a fixed width */
-    /* height: auto; Makes it take the full height of the viewport */
-    /* background-color: #f4f4f9; */
-    /* padding: 15px; */
-    /* border-right: 1px solid #ddd; */
-     /* overflow-y: auto; /*Allows scrolling inside if content overflows */
+    position: fixed;  
+    top: auto;
+    left: 0;
+    width: 290px; 
+    overflow: auto; 
+    z-index: 2;
+}
+
+/* ====================SECTION========================== */
+.content-section {
+    margin-left: 290px;
+   
 }
 
 
@@ -60,50 +69,64 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    padding: 1.2rem;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.profile-details img{
-    width: 100px;
-    height: 100px;
+.profile-pic{
+    max-width:100%;
+    height: 80px;
     border-radius: 50%;
   
 }
 
 .profile-details h2{
-    font-size: 1.3rem;
+    font-size: 1rem;
 
 }
-.profile-details button{
-    display: flex;
-    flex-direction: column;
-}
-
 
 .sidebar li {
     margin: 15px 0;
     display: flex;
     align-items: center;
-    /* background: #4CAF50; */
     font-size: 1.4rem;
     color: #000000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 
+}
+.sidebar li:hover {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+.sidebar li a.active{
+    color: #4CAF50;
+
+}
+.sidebar li i {
+    color: #000;
+    margin-right: 10px;
+}
+.sidebar li i:hover{
+    color: #fff;
+    transition: all 300ms ease;
 }
 
 .sidebar li a {
     text-decoration: none;
-    color: #333;
+    color: #000;
     margin-left: 10px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-transform: uppercase;
 }
 
-.sidebar li.active{
-    color: #4CAF50;
-
-}
-
 .sidebar li a:hover{
-    color:#4CAF50;
+    color:#fff;
     transition: all 300ms ease;
 
 }
@@ -111,7 +134,6 @@
 
 /* ====================SEARCH AREA========================== */
 .search-bar{
-    /* background-color: #4CAF50; */
     margin: 1.5rem 0;
     padding: 2rem 0;
     border-radius: 5px;
@@ -152,12 +174,13 @@
 
 /* Article/Profile Section */
 
-article {
+.profile-section {
     grid-column: true;
     background: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 1rem 0;
 }
 /* *******************The start of prof div *********************************** */
 
@@ -190,18 +213,17 @@ section p {
     color: #555;
 }
 
-section img:last-of-type {
-    grid-column: span 2;
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-}
+
 
 
 /* Responsive Design */
 @media screen and (max-width: 750px) {
     .main-layout {
+        display: grid;
         grid-template-columns: 1fr;
+    }
+    .content-section {
+        margin-left: 0;
     }
 
     .sidebar {
@@ -237,19 +259,9 @@ section img:last-of-type {
         justify-content: flex-start;
     }
 
-    /* .navbar-menu ul{
-        position: absolute;
-        top: 70px;
-        left: 0;
-        right: 0;
-        flex-direction: column;
-        text-align: center;
-        padding: 100px;
-        
-    } */
-    /* .nav-logo img {
-        justify-content: center;
-    } */
+    #search{
+        margin: 0 auto;
+    }
 
     #search input {
         width: 100%;
@@ -274,7 +286,6 @@ section img:last-of-type {
         display: none;
         position: absolute;
         top: 70px;
-        /* left: 0; */
         right: 0;
         flex-direction: column;
         text-align: center;
@@ -290,7 +301,6 @@ section img:last-of-type {
         display: none;
         position: absolute;
         top: 70px;
-        /* left: 0; */
         right: 0;
         flex-direction: column;
         text-align: center;
@@ -301,19 +311,6 @@ section img:last-of-type {
     .nav-logo{
         column-span: all;
     }
-
-    /* .navbar-menu ul{
-        position: absolute;
-        top: 70px;
-        left: 0;
-        right: 0;
-        flex-direction: column;
-        text-align: center;
-        
-    } */
-    /* .nav-logo img {
-        justify-content: center;
-    } */
 
     #search input {
         width: 100%;
