--- a/code/React/React-assignment2/src/index.css
+++ b/code/React/React-assignment2/src/index.css
@@ -6,17 +6,14 @@
   color-scheme: light dark;
   color: #ececec;
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
+  box-sizing: border-box;
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
